Clicking the zone icon under a player's avatar will now hide the zone window if its currently open.
After the last card is removed from a zone window, that window will now automatically be hidden. An example of this would be casting the last card in the Flashback zone.
Default size of zone windows has been slightly reduced.
Prevent horizontal scrollbar appearing in zone windows.

---------
New Cards
---------

Flash Foliage
Myriad Landscape
Siege Behemoth


------------
Known Issues
------------

- Commander 2014 cards -
Forge now includes many of the new Commander 2014 cards. It may take a few days/weeks before these new card pictures become available for downloading via the "Download LQ Card Pictures" button. The LQ set pictures tend to take a few more weeks/months to process before they become available for downloading via the "Download LQ Set Pictures" button. Please be patient. The Forge devs are not involved in maintaining the servers that house these pictures.

- New Khans of Tarkir cards -
Forge now includes many of the new Khans of Tarkir cards. It may take a few days/weeks before these new card pictures become available for downloading via the "Download LQ Card Pictures" button. The LQ set pictures tend to take a few more weeks/months to process before they become available for downloading via the "Download LQ Set Pictures" button. Please be patient. The Forge devs are not involved in maintaining the servers that house these pictures.

- Continued Work on Conspiracy -